--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # This repository is maintained by:
-* @data-douser @advanced-security/es-codeql
+* @data-douser @advanced-security/es-codeql @enyil
